classDiagram
    class FirmwareUpdateViewModel {
      +ObservableCollection~SelectableSensor~ Sensors
      +string FirmwareVersion
      +IAsyncRelayCommand UpdateFirmwareCommand
      +HandleError(Exception, string)
      +Task UpdateFirmwareAsync()
    }
    class SelectableSensor {
      +Sensor Sensor
      +bool IsSelected
    }
    class Sensor {
      +int SensorId
      +string SensorName
      +string Location
      +string FirmwareVersion
    }
    FirmwareUpdateViewModel *-- "*" SelectableSensor : manages
    SelectableSensor --> Sensor : wraps
